--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.19.2",
+    "firebase-admin": "^12.0.0",
     "inquirer": "^8.0.0",
     "localtunnel": "^2.0.2",
     "socket.io": "^4.7.4",
