--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node main.js",
+    "dev": "pm2 start main.js --name 'servercommander'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
