--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "localtunnel": "^2.0.2",
     "socket.io": "^4.7.4",
     "swagger-autogen": "^2.23.7",
-    "swagger-jsdoc": "^6.2.8"
+    "swagger-jsdoc": "^6.2.8",
+    "esprima": "^4.0.1"
   }
 }
