--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase-admin": "^12.0.0",
     "inquirer": "^8.0.0",
     "localtunnel": "^2.0.2",
+    "simple-git": "^3.24.0",
     "socket.io": "^4.7.4",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8"
