--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node main.js",
+    "debug": "node --inspect-brk main.js",
     "dev": "pm2 start main.js --name 'servercommander'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,6 +16,7 @@
     "diff": "^5.2.0",
     "esprima": "^4.0.1",
     "express": "^4.19.2",
+    "fastest-levenshtein": "^1.0.16",
     "firebase-admin": "^12.0.0",
     "inquirer": "^8.0.0",
     "localtunnel": "^2.0.2",
