--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "socket.io": "^4.7.4",
     "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8"
+  },
+  "devDependencies": {
+    "js-beautify": "^1.15.1"
   }
 }
