--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "simple-git": "^3.24.0",
     "socket.io": "^4.7.4",
     "swagger-autogen": "^2.23.7",
-    "swagger-jsdoc": "^6.2.8"
-  },
-  "devDependencies": {
+    "swagger-jsdoc": "^6.2.8",
     "js-beautify": "^1.15.1"
   }
 }
